--- a/DeferredRenderer/DeferredRenderer.vcxproj
+++ b/DeferredRenderer/DeferredRenderer.vcxproj
@@ -180,6 +180,8 @@
     <ClInclude Include="VBO.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="fsquad.frag" />
+    <None Include="fsquad.vert" />
     <None Include="gbuffer.frag" />
     <None Include="gbuffer.vert" />
   </ItemGroup>
