--- a/DeferredRenderer/DeferredRenderer.vcxproj
+++ b/DeferredRenderer/DeferredRenderer.vcxproj
@@ -182,6 +182,8 @@
     <ClInclude Include="VBO.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="blur.frag" />
+    <None Include="blur.vert" />
     <None Include="fsquad.frag" />
     <None Include="fsquad.vert" />
     <None Include="gbuffer.frag" />
