--- a/DeferredRenderer/DeferredRenderer.vcxproj
+++ b/DeferredRenderer/DeferredRenderer.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Octree.cpp" />
     <ClCompile Include="OctreeNode.cpp" />
+    <ClCompile Include="PointLight.h" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneObject.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -172,6 +173,9 @@
     <ClInclude Include="FullscreenQuad.h" />
     <ClInclude Include="GBuffer.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MeshHelper.h">
+      <FileType>CppCode</FileType>
+    </ClInclude>
     <ClInclude Include="Octree.h" />
     <ClInclude Include="OctreeNode.h" />
     <ClInclude Include="Scene.h" />
@@ -184,6 +188,8 @@
   <ItemGroup>
     <None Include="blur.frag" />
     <None Include="blur.vert" />
+    <None Include="light.frag" />
+    <None Include="light.vert" />
     <None Include="ubershader.frag" />
     <None Include="ubershader.vert" />
     <None Include="gbuffer.frag" />
