--- a/DeferredRenderer/DeferredRenderer.vcxproj.filters
+++ b/DeferredRenderer/DeferredRenderer.vcxproj.filters
@@ -1,62 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Mesh">
-      <UniqueIdentifier>{71632cb6-b673-4623-aff3-f6b7c5c9e700}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Materials">
-      <UniqueIdentifier>{fba6576a-21fc-4d41-887a-809a649f9ca3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Lighting">
-      <UniqueIdentifier>{028550e7-1bc1-4acc-b517-dcfc308f9418}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Octree">
-      <UniqueIdentifier>{2c16a48a-e0df-4cbe-a05a-2aec43bdd7eb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\SceneObjects">
-      <UniqueIdentifier>{397e1aff-0b37-46bc-902d-16825d0d7dd0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Shader">
-      <UniqueIdentifier>{057a38ba-275a-4d48-9787-fbe7e153a2d9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Materials">
-      <UniqueIdentifier>{6f584fb9-1dde-4745-8b24-2a23d4c6851b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Lighting">
-      <UniqueIdentifier>{3c2f3d3b-2de5-4d19-923a-0ff34a274a78}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Shader">
-      <UniqueIdentifier>{736fabce-53cd-4171-8f02-79bc7149483c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Octree">
-      <UniqueIdentifier>{f2ca2504-0671-498d-9e5f-21f542eab467}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\SceneObjects">
-      <UniqueIdentifier>{6b894afd-3498-4d05-89aa-b393dabca6ea}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Mesh">
-      <UniqueIdentifier>{b043d2b6-a29f-4e21-ab5d-f3ee45ef6f1e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="tinyobj">
       <UniqueIdentifier>{1a32c216-094c-4ced-9edb-a6e44c91a8e4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Scene">
-      <UniqueIdentifier>{186fb0ca-f31f-4108-a2d5-7338186359ff}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Scene">
-      <UniqueIdentifier>{6089f568-abfa-4a6f-9285-590dbcbf1a32}</UniqueIdentifier>
     </Filter>
     <Filter Include="shaders">
       <UniqueIdentifier>{e95164eb-c675-4c60-afbb-e7386a427c9b}</UniqueIdentifier>
@@ -73,90 +23,123 @@
     <Filter Include="shaders\blur">
       <UniqueIdentifier>{987cbef0-1235-4eb8-b13e-189b6d7ce2b5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{746c42fa-fe6e-4b40-91af-663bf90b30ae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Lighting">
+      <UniqueIdentifier>{028550e7-1bc1-4acc-b517-dcfc308f9418}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Materials">
+      <UniqueIdentifier>{fba6576a-21fc-4d41-887a-809a649f9ca3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Mesh">
+      <UniqueIdentifier>{71632cb6-b673-4623-aff3-f6b7c5c9e700}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Octree">
+      <UniqueIdentifier>{2c16a48a-e0df-4cbe-a05a-2aec43bdd7eb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Scene">
+      <UniqueIdentifier>{6089f568-abfa-4a6f-9285-590dbcbf1a32}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\SceneObjects">
+      <UniqueIdentifier>{397e1aff-0b37-46bc-902d-16825d0d7dd0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Shader">
+      <UniqueIdentifier>{057a38ba-275a-4d48-9787-fbe7e153a2d9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="shaders\lighting">
+      <UniqueIdentifier>{b4cc671f-4630-4d6f-b1cd-55d6aa055e63}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Mesh.cpp">
-      <Filter>Source Files\Mesh</Filter>
+      <Filter>src\Mesh</Filter>
     </ClCompile>
     <ClCompile Include="Octree.cpp">
-      <Filter>Source Files\Octree</Filter>
+      <Filter>src\Octree</Filter>
     </ClCompile>
     <ClCompile Include="OctreeNode.cpp">
-      <Filter>Source Files\Octree</Filter>
+      <Filter>src\Octree</Filter>
     </ClCompile>
     <ClCompile Include="AABB.cpp">
-      <Filter>Source Files\SceneObjects</Filter>
+      <Filter>src\SceneObjects</Filter>
     </ClCompile>
     <ClCompile Include="SceneObject.cpp">
-      <Filter>Source Files\SceneObjects</Filter>
+      <Filter>src\SceneObjects</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>Source Files\Shader</Filter>
+      <Filter>src\Shader</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
-      <Filter>Source Files\Shader</Filter>
+      <Filter>src\Shader</Filter>
     </ClCompile>
     <ClCompile Include="VBO.cpp">
-      <Filter>Source Files\Shader</Filter>
+      <Filter>src\Shader</Filter>
     </ClCompile>
     <ClCompile Include="tiny_obj_loader.cc">
       <Filter>tinyobj</Filter>
     </ClCompile>
     <ClCompile Include="GBuffer.cpp">
-      <Filter>Source Files\Shader</Filter>
+      <Filter>src\Shader</Filter>
     </ClCompile>
     <ClCompile Include="Scene.cpp">
-      <Filter>Source Files\Scene</Filter>
+      <Filter>src\Scene</Filter>
     </ClCompile>
     <ClCompile Include="FullscreenQuad.cpp">
-      <Filter>Source Files\Shader</Filter>
+      <Filter>src\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="PointLight.h">
+      <Filter>src\Lighting</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="common.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Octree.h">
-      <Filter>Header Files\Octree</Filter>
-    </ClInclude>
-    <ClInclude Include="OctreeNode.h">
-      <Filter>Header Files\Octree</Filter>
-    </ClInclude>
-    <ClInclude Include="Shader.h">
-      <Filter>Header Files\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Header Files\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="VBO.h">
-      <Filter>Header Files\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneObject.h">
-      <Filter>Header Files\SceneObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Header Files\Mesh</Filter>
-    </ClInclude>
-    <ClInclude Include="AABB.h">
-      <Filter>Header Files\SceneObjects</Filter>
-    </ClInclude>
     <ClInclude Include="tiny_obj_loader.h">
       <Filter>tinyobj</Filter>
     </ClInclude>
-    <ClInclude Include="GBuffer.h">
-      <Filter>Header Files\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>Header Files\Scene</Filter>
-    </ClInclude>
     <ClInclude Include="Camera.hpp">
-      <Filter>Source Files\Scene</Filter>
+      <Filter>src\Scene</Filter>
     </ClInclude>
     <ClInclude Include="FullscreenQuad.h">
-      <Filter>Header Files\Shader</Filter>
+      <Filter>src\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="GBuffer.h">
+      <Filter>src\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>src\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>src\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="VBO.h">
+      <Filter>src\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="AABB.h">
+      <Filter>src\SceneObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneObject.h">
+      <Filter>src\SceneObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>src\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>src\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="Octree.h">
+      <Filter>src\Octree</Filter>
+    </ClInclude>
+    <ClInclude Include="OctreeNode.h">
+      <Filter>src\Octree</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshHelper.h">
+      <Filter>src\Lighting</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -183,6 +166,12 @@
     </None>
     <None Include="ubershader.vert">
       <Filter>shaders\fsquad</Filter>
+    </None>
+    <None Include="light.vert">
+      <Filter>shaders\lighting</Filter>
+    </None>
+    <None Include="light.frag">
+      <Filter>shaders\lighting</Filter>
     </None>
   </ItemGroup>
 </Project>
