shadowmap no worky

--- a/DeferredRenderer/DeferredRenderer.vcxproj
+++ b/DeferredRenderer/DeferredRenderer.vcxproj
@@ -191,7 +191,7 @@
     <None Include="light.frag" />
     <None Include="light.vert" />
     <None Include="shadow.vert" />
-    <None Include="stencil.frag" />
+    <None Include="empty.frag" />
     <None Include="ubershader.frag" />
     <None Include="ubershader.vert" />
     <None Include="gbuffer.frag" />
