shadow map working

--- a/DeferredRenderer/DeferredRenderer.vcxproj
+++ b/DeferredRenderer/DeferredRenderer.vcxproj
@@ -190,6 +190,7 @@
     <None Include="blur.vert" />
     <None Include="light.frag" />
     <None Include="light.vert" />
+    <None Include="shadow.frag" />
     <None Include="shadow.vert" />
     <None Include="empty.frag" />
     <None Include="ubershader.frag" />
