--- a/DeferredRenderer/DeferredRenderer.vcxproj.filters
+++ b/DeferredRenderer/DeferredRenderer.vcxproj.filters
@@ -185,5 +185,8 @@
     <None Include="empty.frag">
       <Filter>shaders\stencil</Filter>
     </None>
+    <None Include="shadow.frag">
+      <Filter>shaders\shadow</Filter>
+    </None>
   </ItemGroup>
 </Project>
