--- a/DeferredRenderer/DeferredRenderer.vcxproj.filters
+++ b/DeferredRenderer/DeferredRenderer.vcxproj.filters
@@ -56,6 +56,9 @@
     <Filter Include="shaders\shadow">
       <UniqueIdentifier>{94a7df28-72da-4238-b7d2-84f5f41cecda}</UniqueIdentifier>
     </Filter>
+    <Filter Include="shaders\skybox">
+      <UniqueIdentifier>{beab3113-4de1-4423-a482-a87d4247c9c5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Mesh.cpp">
@@ -193,6 +196,12 @@
     </None>
     <None Include="plShadow.frag">
       <Filter>shaders\shadow</Filter>
+    </None>
+    <None Include="skybox.vert">
+      <Filter>shaders\skybox</Filter>
+    </None>
+    <None Include="skybox.frag">
+      <Filter>shaders\skybox</Filter>
     </None>
   </ItemGroup>
 </Project>
